--- a/thingiverse_downloader/templates/thingiverse_downloader_settings.jinja2
+++ b/thingiverse_downloader/templates/thingiverse_downloader_settings.jinja2
@@ -4,7 +4,7 @@
         <div class="thingiverse-downloader-settings-row">
             <label class="control-label thingiverse-downloader-settings-label"><b>{{ _('API Key') }}</b></label>
             <div class="controls thingiverse-downloader-settings-input">
-                <input type="text" class="input-block-level" data-bind="value: settings.plugins.thingiverse_downloader.api_key">
+                <input type="password" class="input-block-level" data-bind="value: settings.plugins.thingiverse_downloader.api_key">
             </div>
         </div>
         <span style="width: auto">
