Code Factor fixes

--- a/thingiverse_downloader/static/css/thingiverse_downloader.css
+++ b/thingiverse_downloader/static/css/thingiverse_downloader.css
@@ -36,8 +36,8 @@
 
 .thingiverse-downloader-preview-name {
   font-size: larger;
-  margin: 0px 4px;
-  padding: 0px 4px;
+  margin: 0 4px;
+  padding: 0 4px;
   color: slategray;
 }
 
