Override name code

--- a/thingiverse_downloader/templates/thingiverse_downloader_tab.jinja2
+++ b/thingiverse_downloader/templates/thingiverse_downloader_tab.jinja2
@@ -15,7 +15,7 @@
             <button type="reset" class="btn btn-primary" data-bind="click: downloadUrlFiles, disable: loading() || thingUrl() === '' || result() === null">
                 <i class="fas fa-redo-alt"></i>
             </button>
-            <button type="reset" class="btn" data-bind="click: clearThingUrl, disable: loading() || thingUrl() === ''" title="Clear Text">
+            <button type="reset" class="btn" data-bind="click: clearAll, disable: loading() || thingUrl() === ''" title="Clear Text">
                 <i class="fas fa-times-circle"></i>
             </button>
         </div>
